
0.2 (unreleased)
================

- Added option to use external patch binary instead of bundled python-patch

0.1 (xxxx-xx-xx)
==================

 - Created recipe with ZopeSkel [Rok Garbas].